--- a/.github/workflows/build-dockerfile.yml
+++ b/.github/workflows/build-dockerfile.yml
@@ -1,16 +1,23 @@
-name: build
+name: ci
+
 on:
   workflow_dispatch: # allows manual triggering
   push:
     branches: [$default-branch]
 
 jobs:
-  build:
-
+  buildx:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: docker/build-action@v1
-      with:
-        repository:  dawn-ico/dusk-dawn-notebook
-        tags: main
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        uses: docker/setup-buildx-action@v1
+        id: buildx
+        with:
+          install: true
+      -
+        name: Build
+        run: |
+          docker build . # will run buildx
