FIX: MYBINDERORG_CACHE variable

--- a/.github/workflows/build-dockerfile.yml
+++ b/.github/workflows/build-dockerfile.yml
@@ -15,4 +15,4 @@ jobs:
     - name: update jupyter dependencies with repo2docker
       uses: machine-learning-apps/repo2docker-action@master
       with:
-        MYBINDERORG_CACHE: true
+        BINDER_CACHE: true
