Disabled workflow for PRs (broken)

--- a/.github/workflows/build-dockerfile.yml
+++ b/.github/workflows/build-dockerfile.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch: # allows manual triggering
   push:
     branches: [ $default-branch ]
-  pull_request:
+  #pull_request: # PRs can't work correctly right now
   schedule: # run every day at midnight
     - cron: '0 0 * * *'
 
